--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "@discord-factory/core-next": "^2.0.1",
     "@leadcodedev/logger": "^1.0.0",
     "discord.js": "13.1.0",
-    "module-alias": "^2.2.2"
+    "dotenv": "^16.0.0",
+    "module-alias": "^2.2.2",
+    "moment": "^2.29.1",
+    "puppeteer": "^13.1.3"
   },
   "ava": {
     "extensions": [
