--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "@discord-factory/core-next": "^2.0.1",
     "@leadcodedev/logger": "^1.0.0",
     "discord.js": "13.1.0",
-    "module-alias": "^2.2.2"
+    "module-alias": "^2.2.2",
+    "mysql": "^2.18.1",
+    "typeorm": "^0.2.41"
   },
   "ava": {
     "extensions": [
