[FIX] Fixed database not loading entities in production mode

--- a/ormconfig.json
+++ b/ormconfig.json
@@ -7,6 +7,7 @@
   "database": "tarlebot",
   "synchronize": true,
   "entities": [
+    "build/src/database/entities/*.ts",
     "src/database/entities/*.ts"
   ]
 }
