--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
     "discord.js": "13.1.0",
     "module-alias": "^2.2.2",
     "mysql": "^2.18.1",
-    "typeorm": "^0.2.41",
-    "moment": "^2.29.1",
-    "puppeteer": "^13.1.3"
+    "typeorm": "^0.2.41"
   },
   "ava": {
     "extensions": [
