--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@leadcodedev/logger": "^1.0.0",
     "discord.js": "13.1.0",
     "module-alias": "^2.2.2",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "typeorm": "^0.2.41"
   },
